--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,20 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
-
     <string name="title_activity_full_view_pager">FullViewPagerActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="text_content"> </string>
+    <string name="text_content">1</string>
     <string name="android_studio">Android Studio</string>
+
+    <string name="but1">show intent no result</string>
+    <string name="but2">show intent have result</string>
+    <string name="but3">System Application</string>
+    <string name="but4">action intent to value</string>
+    <string name="text2">the three activity</string>
+    <string name="back">Back</string>
+    <string name="send_back">SEND BACK</string>
+
+
 </resources>
